Fix modals on mobile

--- a/client/src/ui/modals/FullChangelogModal.scss
+++ b/client/src/ui/modals/FullChangelogModal.scss
@@ -28,7 +28,7 @@
 @media screen and (max-width: 768px) {
   .full-changelog-modal {
     width: calc(100vw - 16px);
-    height: calc(100vh - 16px);
+    height: calc(100% - 16px);
     padding: 15px 10px;
     margin: 0 auto;
 
