--- a/client/src/ui/modals/LeaderboardModal.scss
+++ b/client/src/ui/modals/LeaderboardModal.scss
@@ -141,7 +141,7 @@ iframe {
 @media screen and (max-width: 768px) {
   .leaderboard-modal {
     width: calc(100vw - 16px);
-    height: calc(100vh - 16px);
+    height: calc(100% - 16px);
     padding: 15px 10px;
     margin: 0 auto;
 
