--- a/client/src/ui/modals/Modal.scss
+++ b/client/src/ui/modals/Modal.scss
@@ -51,14 +51,29 @@
 
 @media screen and (max-width: 768px) {
   .modal.modal-fullscreen {
-    padding: 8px;
+    position: fixed;
+    inset: 0;
+    left: 0;
+    top: 0;
+    transform: none;
     min-width: unset;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 
     > :first-child {
       margin: 0;
+    }
+
+    .modal-close {
+      top: 8px;
+      right: 8px;
+      z-index: 10;
     }
   }
 }
