--- a/client/src/ui/modals/ProfileModal.scss
+++ b/client/src/ui/modals/ProfileModal.scss
@@ -112,7 +112,7 @@
 @media screen and (max-width: 768px) {
   .profile-modal {
     width: calc(100vw - 16px);
-    height: calc(100vh - 16px);
+    height: calc(100% - 16px);
     padding: 15px 10px;
     margin: 0 auto;
 
